# simplex_risk_sim_tool

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  sample_data.py  schemas.py  simulation.py
backend/tests/: test_actuarial.py  test_api.py  test_cat.py  test_integration.py  test_simulation.py
docs/: IMPLEMENTATION_SUMMARY.md  actuarial_cat_features.md  implementation.md  requirements.md  summary.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts  useSimulation.ts
frontend/src/__tests__/: SimulationForm.test.tsx
frontend/src/components/: HistogramChart.tsx  MetricsCards.tsx  ResultsPanel.tsx  SimulationForm.tsx
