[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-sim-backend"
version = "0.1.0"
description = "Monte Carlo risk simulation API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]
